# mythreadPoll

./: CMakeLists.txt  Readme.md  状态机模型.drawio
Note/: note.md
config/: config.ini  config1.ini
include/: ini.h  threadPool.h
src/thread/: threadPool.cpp  workThread.cpp
src/utils/: ini.cpp
test/: initest.cpp  threadtest.cpp
